--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,3 +1,42 @@
 .Options {
-    align-items: flex-end;
+  align-items: flex-end;
+}
+
+.Menu {
+  margin-top: 0px;
+  vertical-align: middle;
+}
+
+.Menu:hover {
+  cursor: pointer;
+}
+
+.ProfilePic {
+  max-width: 50%;
+}
+
+@keyframes showing {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(3);
+    -webkit-transform: scale(1);
+  }
+}
+
+.UserInfoPopup {
+  animation: showing 300ms ease-in-out;
+  text-align: center;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: #7f00ff;
 }
