--- a/src/Components/Plugins/Dashboard/Dashboard.scss
+++ b/src/Components/Plugins/Dashboard/Dashboard.scss
@@ -6,8 +6,10 @@
   margin-top: 0px;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100%;
-  padding: 0em;
+  padding: 1em 1em 0 1em;
+}
+.banner i:hover {
+  cursor: pointer;
 }
 
 .hero {
@@ -17,12 +19,7 @@
 }
 
 .second {
-  background-color: #f5fcfb;
-  /* background-image: linear-gradient(32deg, #58abf8 0%, aquamarine 100%); */
-  height: 90vh;
-}
-
-.third {
+  margin-top: 5vh;
   text-align: center;
   background-color: rgb(181, 247, 227);
   background-image: linear-gradient(
@@ -30,40 +27,45 @@
     #71b5f5 0%,
     rgb(181, 247, 227) 100%
   );
-  height: 82vh;
+  height: 48vh;
+  padding-top: 22vh;
+}
+
+.third {
+  text-align: center;
+  background-image: linear-gradient(45deg, #eff09f 0%, #62ecb7 100%);
+  height: 28vh;
+  padding-top: 13vh;
+}
+
+.trend {
+  margin: 5em 3em 0 3em;
+  height: 28vh;
+  padding-top: 5em;
 }
 
 .fourth {
   text-align: center;
-  background-color: rgb(211, 224, 220);
-  height: 62vh;
-}
-
-.pushable {
-  height: inherit;
+  background-color: #ffffff;
+  height: 48vh;
+  padding-top: 3vh;
 }
 
 .sidebar {
-  text-align: center;
-  padding-top: 8vh;
   margin-top: 0%;
-  background-color: #053969;
+  position: fixed;
+  height: 100%;
 }
 
-.sidebar a {
-  color: white;
-  font-size: medium;
-  text-align: justify;
+.sidebarMenu {
+  position: fixed;
+  height: inherit;
+  width: inherit;
+  padding-top: 8vh;
 }
 
 .sidebarMenu:hover {
   cursor: pointer;
-  transform: scale3d(1.2);
-}
-
-.sidebarMenuIcon:hover {
-  cursor: pointer;
-  transform: scale3d(1.2);
 }
 
 .content {
@@ -120,7 +122,7 @@
   will-change: transform;
   transform: rotate(0.01deg);
   border-radius: 0.5rem;
-  width: 15vh;
+  width: 100%;
   height: 20vh;
   background-color: white;
   transition: 0.175s cubic-bezier(0.39, 0.575, 0.565, 1);
