--- a/src/Components/Util/Navbar/Navbar.scss
+++ b/src/Components/Util/Navbar/Navbar.scss
@@ -1,3 +1,11 @@
+.Navbar {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  left: 0px;
+  top: 0px;
+  background-color: #ffffff;
+}
 .Options {
   align-items: flex-end;
 }
