--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -44,21 +44,27 @@
 .signIn {
   margin-top: 10px;
   margin-left: 10px;
-  width: 107px;
+  width: 10rem;
   height: 45px;
   text-align: center;
   align-content: center;
 
-  background: #006eff;
-  border-radius: 3px;
+  background: #868bff;
+  border-radius: 5px;
+
+  &:hover {
+    background: #868bff;
+    border: 0px;
+    cursor: pointer;
+  }
 }
 
 .signIn text {
-  font-family: Lato;
+  font-family: monospace;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
-  width: 100px;
+  width: 100%;
   height: 38px;
   color: #ffffff;
   display: block;
@@ -67,18 +73,24 @@
 .join {
   margin-top: 10px;
   margin-right: 10px;
-  width: 107px;
+  width: 10rem;
   height: 45px;
   text-align: center;
   align-content: center;
 
   border: 1.5px solid #ffffff;
   box-sizing: border-box;
-  border-radius: 7px;
+  border-radius: 5px;
+
+  &:hover {
+    background: #7720bb;
+    border: 0px;
+    cursor: pointer;
+  }
 }
 
 .join text {
-  font-family: Lato;
+  font-family: monospace;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
