--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -1,34 +1,23 @@
 .hero {
   // position: absolute;
   width: 100%;
-  height: 800px;
+  height: 60rem;
+  padding-left: 12%;
 
-  background: linear-gradient(
-    323.03deg,
-    #242424 10.61%,
-    #a357de 60.18%,
-    #68d8fc 157.1%
-  );
-  // linear-gradient(
-  //   308.33deg,
-  //   #7720bb 50.13%,
-  //   #ae47ff 50.13%,
-  //   #68d8fc 119.45%
-  // );
-  // linear-gradient(238.61deg, #ae47ff -0.6%, #68d8fc 108.58%);
+  background: linear-gradient(118.16deg, #ff6565 -3.9%, #712da6 83.76%);
 }
 
 .heroMsg {
   position: absolute;
-  width: 630px;
+  width: 35%;
   height: 252px;
-  left: 80px;
-  top: 200px;
+  // left: 0%;
+  top: 20%;
 
   font-family: lato;
   font-style: normal;
-  font-size: 72px;
-  line-height: 91px;
+  font-size: 5rem;
+  line-height: 6.5rem;
 
   color: #ffffff;
 }
@@ -37,97 +26,165 @@
   position: absolute;
   width: 542px;
   height: 149.01px;
-  left: 80px;
-  top: 511.99px;
-}
+  // left: 80px;
+  top: 35rem;
 
-.exploreBtn {
-  position: absolute;
-  width: 239px;
-  height: 58px;
-  left: 0px;
-  top: 45.01px;
-}
+  .exploreBtn {
+    position: absolute;
+    width: 239px;
+    height: 58px;
+    left: 0px;
+    top: 45.01px;
 
-.exploreBtn a {
-  position: absolute;
-  width: 239px;
-  height: 58px;
-  left: 0px;
-  top: 0px;
+    a {
+      position: absolute;
+      width: 239px;
+      height: 58px;
+      left: 0px;
+      top: 0px;
 
-  border: 2px solid #ffffff;
-  box-sizing: border-box;
-}
+      border: 2px solid #ffffff;
+      box-sizing: border-box;
 
-.exploreBtn a text {
-  position: absolute;
-  width: 199px;
-  height: 34px;
-  left: 20px;
-  top: 8px;
+      text {
+        position: absolute;
+        width: 199px;
+        height: 34px;
+        left: 20px;
+        top: 8px;
 
-  font-family: Lato;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 35px;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 30px;
+        line-height: 35px;
 
-  color: #ffffff;
-}
+        color: #ffffff;
+      }
+    }
+  }
 
-.contribBtn {
-  position: absolute;
-  width: 239px;
-  height: 58px;
-  left: 303px;
-  top: 45.01px;
-}
+  .contribBtn {
+    position: absolute;
+    width: 239px;
+    height: 58px;
+    left: 303px;
+    top: 45.01px;
 
-.contribBtn a {
-  position: absolute;
-  width: 242px;
-  height: 58px;
-  left: 0px;
-  top: 0px;
+    a {
+      position: absolute;
+      width: 242px;
+      height: 58px;
+      left: 0px;
+      top: 0px;
 
-  border: 2px solid #ffffff;
-  box-sizing: border-box;
-}
+      border: 2px solid #ffffff;
+      box-sizing: border-box;
 
-.contribBtn a text {
-  position: absolute;
-  width: 214px;
-  height: 34px;
+      text {
+        position: absolute;
+        width: 214px;
+        height: 34px;
 
-  text-align: center;
-  left: 14px;
-  top: 8px;
+        text-align: center;
+        left: 14px;
+        top: 8px;
 
-  font-family: Lato;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 35px;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 30px;
+        line-height: 35px;
 
-  color: #ffffff;
-}
+        color: #ffffff;
+      }
+    }
+  }
 
-.separator {
-  position: absolute;
-  width: 149.01px;
-  height: 0px;
-  left: 197px;
-  top: 70px;
+  .separator {
+    position: absolute;
+    width: 149.01px;
+    height: 0px;
+    left: 197px;
+    top: 70px;
 
-  border: 1px solid rgba(255, 255, 255, 0.192);
-  transform: rotate(-90deg);
+    border: 1px solid rgba(255, 255, 255, 0.192);
+    transform: rotate(-90deg);
+  }
 }
 
 .heroImg {
   position: absolute;
   width: 600px;
   height: 600px;
-  right: 80px;
-  top: 200px;
+  right: 12%;
+  top: 15%;
+}
+
+@media (max-width: 1600px) {
+  .hero {
+    width: 100%;
+    height: 55rem;
+  }
+  .heroMsg {
+    left: 8%;
+    width: 40%;
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+  .startBtnGrp {
+    left: 8%;
+    top: 36rem;
+  }
+  .heroImg {
+    size: 80%;
+    right: 8%;
+  }
+}
+
+@media (max-width: 1360px) {
+  .hero {
+    // position: absolute;
+    width: 100%;
+    height: 50rem;
+  }
+  .heroMsg {
+    left: 5%;
+    width: 45%;
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+  .startBtnGrp {
+    left: 5%;
+    top: 37rem;
+  }
+  .heroImg {
+    right: 5%;
+    width: 540px;
+    height: 540px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .hero {
+    // position: absolute;
+    width: 100%;
+    height: 47rem;
+  }
+  .heroMsg {
+    left: 2%;
+    width: 50%;
+    font-size: 4.5rem;
+    line-height: 5.5rem;
+  }
+  .startBtnGrp {
+    left: 20%;
+    align-content: center;
+    top: 33rem;
+  }
+  .heroImg {
+    right: 2%;
+    width: 450px;
+    height: 450px;
+  }
 }
