--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -5,7 +5,7 @@
   // left: 168px;
   top: 6px;
 
-  font-family: Lato;
+  font-family: "barlow";
   font-style: normal;
   font-size: 36px;
   line-height: 45px;
@@ -15,17 +15,14 @@
 
 .navbar {
   position: absolute;
-  width: 559px;
-  height: 37px;
-  // left: 710px;
-  top: 6px;
+  width: 100%;
 }
 
 .navLink {
   margin-top: 10px;
-  font-family: Lato;
+  font-family: lato;
   font-style: normal;
-  font-weight: normal;
+  font-weight: lighter;
   font-size: 20px;
   // top: 10px;
   // line-height: 28px;
@@ -53,17 +50,17 @@
   border-radius: 5px;
 
   &:hover {
-    background: #868bff;
+    background: #676ac5;
     border: 0px;
     cursor: pointer;
   }
 }
 
 .signIn text {
-  font-family: monospace;
+  font-family: lato;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 20px;
   width: 100%;
   height: 38px;
   color: #ffffff;
@@ -73,27 +70,27 @@
 .join {
   margin-top: 10px;
   margin-right: 10px;
+  margin-left: 10px;
   width: 10rem;
   height: 45px;
   text-align: center;
   align-content: center;
 
-  border: 1.5px solid #ffffff;
-  box-sizing: border-box;
+  background: #712da6;
   border-radius: 5px;
 
   &:hover {
-    background: #7720bb;
+    background: #5d2488;
     border: 0px;
     cursor: pointer;
   }
 }
 
 .join text {
-  font-family: monospace;
+  font-family: lato;
   font-style: normal;
   font-weight: normal;
-  font-size: 24px;
-  width: 100px;
+  font-size: 20px;
+  width: 100%;
   color: #ffffff;
 }
