--- a/src/Components/Generic/Assets/courselist.scss
+++ b/src/Components/Generic/Assets/courselist.scss
@@ -15,11 +15,10 @@
 
   box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.1);
 
-  transition: top 0.25s;
-  // transition: left 0.2s;
+  transition: transform 0.2s ease;
+
   &:hover {
-    // left: 5px;
-    top: -5px;
+    transform: scale(1.1);
     box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.2);
   }
 
