--- a/src/Components/Plugins/Courses/detailed.scss
+++ b/src/Components/Plugins/Courses/detailed.scss
@@ -26,9 +26,68 @@
   }
 }
 
-.modBox {
+.listModBox {
   padding: 0 2rem 0 4rem;
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-auto-flow: dense;
+}
+
+.modBox {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.detailedModBox {
+  // width: 80%;
+  grid-column: 1/ -1;
+  padding: 0 2rem 0 4rem;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: 1fr;
+  // height: 100px;
+  background: #ffffff;
+  border: 1px solid #dadada;
+  box-sizing: border-box;
+  border-radius: 2px;
+  padding: 2rem;
+
+  .heading {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 40px;
+
+    color: #000000;
+  }
+
+  .desc {
+    font-family: Barlow;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 2rem;
+  }
+
+  .lessons {
+    display: grid;
+    grid-gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+
+    // @media (max-width: 1300) {
+    //   grid-template-columns: 1fr 1fr 1fr;
+    // }
+
+    .item {
+      // background: #ffffff;
+      border: 1px solid #d0d2d5;
+      box-sizing: border-box;
+      border-radius: 10px;
+      padding: 1rem;
+    }
+  }
 }
