--- a/src/Components/Plugins/Courses/detailed.scss
+++ b/src/Components/Plugins/Courses/detailed.scss
@@ -26,8 +26,18 @@
   }
 }
 
+.secondaryBox {
+  padding: 1rem 2rem 2rem 4rem;
+}
+
 .listModBox {
-  padding: 0 2rem 0 4rem;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-auto-flow: dense;
+}
+
+.listAssignBox {
   display: grid;
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
@@ -70,17 +80,14 @@
     font-weight: normal;
     font-size: 16px;
     line-height: 24px;
-    padding: 2rem;
+
+    color: #2e2e2e;
   }
 
   .lessons {
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-
-    // @media (max-width: 1300) {
-    //   grid-template-columns: 1fr 1fr 1fr;
-    // }
 
     .item {
       // background: #ffffff;
