Added how it works panel

--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -1,6 +1,15 @@
 // Gradients
 $grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
+$grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
 
 // Colors
+$White-0: #ffffff;
+$White-1: #fafafa;
+
 $Blue-1: #1323dd;
 $Blue-2: #4a3ebe;
+$Blue-3: #397ef0;
+
+$Yellow-1: #ffe3b0;
+
+$Black-1: #3f3e3e;
