--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -64,11 +64,18 @@
     @extend %lgBtn;
     background: $Blue-1;
     margin-right: 20px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   .contributeBtn {
     @extend %lgBtn;
     background: $Blue-2;
     margin-left: 20px;
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
