--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -1,190 +1,13 @@
-.hero {
-  // position: absolute;
-  width: 100%;
-  height: 65rem;
-  padding-left: 12%;
+.landing {
+  position: relative;
+  background-color: #fafafa;
+  z-index: -1;
 
-  background: linear-gradient(118.16deg, #ff6565 -3.9%, #712da6 83.76%);
-}
-
-.heroMsg {
-  position: absolute;
-  width: 35%;
-  height: 252px;
-  // left: 0%;
-  top: 20%;
-
-  font-family: lato;
-  font-style: normal;
-  font-size: 5rem;
-  line-height: 6.5rem;
-
-  color: #ffffff;
-}
-
-.startBtnGrp {
-  position: absolute;
-  width: 542px;
-  height: 149.01px;
-  // left: 80px;
-  top: 35rem;
-
-  .exploreBtn {
+  .backWorking {
     position: absolute;
-    width: 239px;
-    height: 58px;
-    left: 0px;
-    top: 45.01px;
-
-    a {
-      position: absolute;
-      width: 239px;
-      height: 58px;
-      left: 0px;
-      top: 0px;
-
-      border: 2px solid #ffffff;
-      box-sizing: border-box;
-
-      text {
-        position: absolute;
-        width: 199px;
-        height: 34px;
-        left: 20px;
-        top: 8px;
-
-        font-family: Lato;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
-        line-height: 35px;
-
-        color: #ffffff;
-      }
-    }
-  }
-
-  .contribBtn {
-    position: absolute;
-    width: 239px;
-    height: 58px;
-    left: 303px;
-    top: 45.01px;
-
-    a {
-      position: absolute;
-      width: 242px;
-      height: 58px;
-      left: 0px;
-      top: 0px;
-
-      border: 2px solid #ffffff;
-      box-sizing: border-box;
-
-      text {
-        position: absolute;
-        width: 214px;
-        height: 34px;
-
-        text-align: center;
-        left: 14px;
-        top: 8px;
-
-        font-family: Lato;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
-        line-height: 35px;
-
-        color: #ffffff;
-      }
-    }
-  }
-
-  .separator {
-    position: absolute;
-    width: 149.01px;
-    height: 0px;
-    left: 197px;
-    top: 70px;
-
-    border: 1px solid rgba(255, 255, 255, 0.192);
-    transform: rotate(-90deg);
-  }
-}
-
-.heroImg {
-  position: absolute;
-  width: 600px;
-  height: 600px;
-  right: 12%;
-  top: 15%;
-}
-
-@media (max-width: 1600px) {
-  .hero {
     width: 100%;
-    height: 55rem;
-  }
-  .heroMsg {
-    left: 8%;
-    width: 40%;
-    font-size: 5rem;
-    line-height: 6rem;
-  }
-  .startBtnGrp {
-    left: 8%;
-    top: 36rem;
-  }
-  .heroImg {
-    size: 80%;
-    right: 8%;
-  }
-}
-
-@media (max-width: 1360px) {
-  .hero {
-    // position: absolute;
-    width: 100%;
-    height: 50rem;
-  }
-  .heroMsg {
-    left: 5%;
-    width: 45%;
-    font-size: 5rem;
-    line-height: 6rem;
-  }
-  .startBtnGrp {
-    left: 5%;
-    top: 37rem;
-  }
-  .heroImg {
-    right: 5%;
-    width: 540px;
-    height: 540px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .hero {
-    // position: absolute;
-    width: 100%;
-    height: 47rem;
-  }
-  .heroMsg {
-    left: 2%;
-    width: 50%;
-    font-size: 4.5rem;
-    line-height: 5.5rem;
-  }
-  .startBtnGrp {
-    left: 20%;
-    align-content: center;
-    top: 33rem;
-  }
-  .heroImg {
-    right: 2%;
-    width: 450px;
-    height: 450px;
+    top: 450px;
+    height: 700px;
+    z-index: -1;
   }
 }
