--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -1,6 +1,8 @@
+@import "./../../../../static/styles/globals.scss";
+
 .landing {
   position: relative;
-  background-color: #fafafa;
+  background-color: $White-1;
   z-index: -1;
 
   .backWorking {
@@ -9,5 +11,12 @@
     top: 450px;
     height: 700px;
     z-index: -1;
+  }
+
+  .topCourses {
+    margin: 8rem 0 8rem 0;
+
+    height: 580px;
+    background: $Blue-10;
   }
 }
