--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -1,15 +1,21 @@
 // Gradients
 $grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
 $grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
+$grad-3: linear-gradient(204.02deg, #000000 -91.48%, #84eefc 101.17%);
+$grad-4: linear-gradient(204.02deg, #ec4c5c 0.57%, #ffe3b0 101.17%);
 
 // Colors
 $White-0: #ffffff;
 $White-1: #fafafa;
+$White-2: #f7f7f7;
 
 $Blue-1: #1323dd;
 $Blue-2: #4a3ebe;
 $Blue-3: #397ef0;
 
+$Blue-10: #d9e3fd;
+
 $Yellow-1: #ffe3b0;
+$Yellow-2: #fbbc05;
 
 $Black-1: #3f3e3e;
