--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -8,15 +8,22 @@
   .backWorking {
     position: absolute;
     width: 100%;
-    top: 450px;
+    margin-top: -10rem;
     height: 700px;
     z-index: -1;
   }
 
   .topCourses {
-    margin: 8rem 0 8rem 0;
+    margin: 8rem 0 0rem 0;
 
     height: 580px;
     background: $Blue-10;
+  }
+
+  .partners {
+    position: absolute;
+    width: 100%;
+    height: 700px;
+    z-index: -1;
   }
 }
