--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -1,9 +1,3 @@
-// Gradients
-$grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
-$grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
-$grad-3: linear-gradient(204.02deg, #000000 -91.48%, #84eefc 101.17%);
-$grad-4: linear-gradient(204.02deg, #ec4c5c 0.57%, #ffe3b0 101.17%);
-
 // Colors
 $White-0: #ffffff;
 $White-1: #fafafa;
@@ -19,3 +13,10 @@ $Yellow-1: #ffe3b0;
 $Yellow-2: #fbbc05;
 
 $Black-1: #3f3e3e;
+
+// Gradients
+$grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
+$grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
+$grad-3: linear-gradient(204.02deg, #000000 -91.48%, #84eefc 101.17%);
+$grad-4: linear-gradient(204.02deg, #ec4c5c 0.57%, #ffe3b0 101.17%);
+$grad-5: linear-gradient(149.18deg, #fec480 2.94%, #ec4c5c 101.19%);
