--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -34,4 +34,10 @@
     background: $grad-5;
     border-radius: 10px;
   }
+
+  .mentions {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+  }
 }
