--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -1,10 +1,10 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  padding-top: 20px;
+  padding: 20px 0 20px 0;
   display: grid;
   grid-template-columns: 12.5% 70% 12.5%;
-  grid-template-rows: 80% 17.5%;
+  grid-template-rows: 80% auto;
   grid-gap: 2.5% 2.5%;
   height: 70%;
 }
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-  padding: 0 3% 0 3%;
+  padding: 1% 3% 2rem 3%;
 
   align-items: center;
 
@@ -59,7 +59,7 @@
 
 .heroBtns {
   justify-self: center;
-  padding-top: 20px;
+  margin-top: 20px;
   .exploreBtn {
     @extend %lgBtn;
     background: $Blue-1;
@@ -74,6 +74,7 @@
     @extend %lgBtn;
     background: $Blue-2;
     margin-left: 20px;
+
     &:hover {
       cursor: pointer;
     }
