--- a/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
+++ b/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
@@ -1,7 +1,7 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  margin: 3rem 8rem 0 8rem;
+  padding: 1.5rem 8rem 0 8rem;
 }
 
 .grid {
