--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -3,18 +3,17 @@
 .landing {
   position: relative;
   background-color: $White-1;
-  z-index: -1;
+  z-index: 1;
 
   .backWorking {
     position: absolute;
     width: 100%;
-    margin-top: -10rem;
-    height: 700px;
+    margin-top: -14rem;
     z-index: -1;
   }
 
   .topCourses {
-    margin: 8rem 0 0rem 0;
+    margin: 5rem 0 3rem 0;
 
     height: 580px;
     background: $Blue-10;
@@ -23,12 +22,11 @@
   .partners {
     position: absolute;
     width: 100%;
-    height: 700px;
     z-index: -1;
   }
 
   .testimonials {
-    margin: 6rem 2.5% 4rem 2.5%;
+    margin: 5rem 2.5% 4rem 2.5%;
     height: 510px;
 
     background: $grad-5;
@@ -39,5 +37,6 @@
     position: absolute;
     width: 100%;
     z-index: -1;
+    max-height: 500px;
   }
 }
