--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -43,8 +43,9 @@
   width: 280px;
   height: 60px;
 
-  border-radius: 5px;
+  border-radius: 2px;
   border: 0px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
 
   font-family: Barlow;
   font-style: normal;
