--- a/src/Components/Generic/Assets/courselist.scss
+++ b/src/Components/Generic/Assets/courselist.scss
@@ -1,393 +1,388 @@
 .courseCard {
-  position: relative;
-  width: 320px;
-  height: 400px;
-  left: 0px;
-  top: 0px;
+  width: 222px;
+  height: 302px;
 
-  margin-top: 3rem;
-  margin-left: 3rem;
-
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid #d6d6d6;
   box-sizing: border-box;
-  border-radius: 5px;
+  border-radius: 2px;
 
   box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.1);
 
-  transition: transform 0.2s ease;
+  transition: transform 0.1s ease;
 
   &:hover {
-    transform: scale(1.04);
-    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.2);
-  }
-
-  .title {
-    position: absolute;
-    width: 320px;
-    height: 72px;
-    left: 0px;
-    top: 8px;
-
-    p {
-      position: absolute;
-      width: 165px;
-      height: 22px;
-      left: 12px;
-      top: 5px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 900;
-      font-size: 16px;
-      line-height: 19px;
-
-      color: #000000;
-    }
-  }
-
-  .descriptionBox {
-    position: absolute;
-    width: 320px;
-    height: 80px;
-    left: 0px;
-    top: 80px;
-
-    p {
-      position: absolute;
-      width: 151.59px;
-      height: 14px;
-      left: 12px;
-      top: 8px;
-
-      font-family: Lato;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 12px;
-      line-height: 14px;
-
-      color: #ada8a8;
-    }
-  }
-
-  .credNratingBox {
-    position: absolute;
-    width: 320px;
-    height: 64px;
-    left: 0px;
-    top: 160px;
-
-    .creditBox {
-      position: absolute;
-      width: 127px;
-      height: 64px;
-      left: 192px;
-      top: 0px;
-
-      background: #ffffff;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      box-sizing: border-box;
-
-      .heading {
-        position: absolute;
-        width: 91px;
-        height: 20px;
-        left: 18px;
-        top: 6px;
-
-        font-family: Barlow;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        /* identical to box height */
-
-        color: #525252;
-      }
-
-      .value {
-        position: absolute;
-        width: 32px;
-        height: 32px;
-        left: 48px;
-        top: 24px;
-
-        font-family: Scope One;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 32px;
-        line-height: 44px;
-
-        color: #868bff;
-      }
-    }
-
-    .ratingBox {
-      position: absolute;
-      width: 193px;
-      height: 64px;
-      left: -1px;
-      top: 0px;
-
-      background: #ffffff;
-      border: 1px solid rgba(0, 0, 0, 0.1);
-      box-sizing: border-box;
-
-      .heading {
-        position: absolute;
-        width: 46px;
-        height: 20px;
-        left: 72px;
-        top: 3px;
-
-        font-family: Barlow;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-        /* identical to box height */
-
-        color: #525252;
-      }
-    }
-  }
-
-  .subCatBox {
-    position: absolute;
-    width: 320px;
-    height: 72px;
-    left: 0px;
-    top: 223px;
-
-    .subjectBox {
-      position: absolute;
-      left: 5.94%;
-      right: 51.25%;
-      top: 22.22%;
-      bottom: 38.89%;
-
-      border: 1px solid rgba(30, 200, 255, 0.54);
-      box-sizing: border-box;
-      border-radius: 2px;
-
-      .value {
-        position: absolute;
-        // width: 40px;
-        height: 14px;
-        left: 7px;
-        top: 7px;
-
-        font-family: Barlow;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 14px;
-
-        color: #1ec8ff;
-      }
-    }
-
-    .categoryBox {
-      position: absolute;
-      left: 53.12%;
-      right: 5.62%;
-      top: 22.22%;
-      bottom: 38.89%;
-
-      border: 1px solid rgba(50, 0, 250, 0.19);
-      box-sizing: border-box;
-      border-radius: 2px;
-
-      .value {
-        position: absolute;
-        // width: 48px;
-        height: 14px;
-        left: 6px;
-        top: 7px;
-
-        font-family: Barlow;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 14px;
-
-        color: #3200fa;
-      }
-    }
-  }
-
-  .authorBox {
-    position: absolute;
-    width: 320px;
-    height: 40px;
-    left: -1px;
-    top: 294px;
-
-    background: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-
-    .heading {
-      position: absolute;
-      width: 50px;
-      height: 20px;
-      left: 84px;
-      top: 10px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 19px;
-      /* identical to box height */
-
-      color: #525252;
-    }
-
-    .value {
-      position: absolute;
-      width: 78px;
-      height: 11px;
-      left: 170px;
-      top: 14px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 300;
-      font-size: 12px;
-      line-height: 14px;
-
-      color: #000000;
-    }
-  }
-
-  .enrollBtn {
-    position: absolute;
-    left: 26.25%;
-    right: 23.75%;
-    top: 86.5%;
-    bottom: 3.5%;
-
-    width: 160px;
-    height: 40px;
-
-    background: #41a3fe;
-    border: 1px solid #41a3fe;
-    border-radius: 1px;
-
-    text {
-      position: absolute;
-      width: 51px;
-      height: 24px;
-      left: 54px;
-      top: 8px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 24px;
-      /* identical to box height */
-
-      color: #ffffff;
-    }
-
-    &:hover {
-      cursor: pointer;
-      border: 1px solid #41a3fe;
-      box-sizing: border-box;
-      background: #ffffff;
-      border-radius: 1px;
-
-      text {
-        color: #41a3fe;
-      }
-    }
-  }
-
-  .modifyBtn {
-    position: absolute;
-    left: 26.25%;
-    right: 23.75%;
-    top: 86.5%;
-    bottom: 3.5%;
-
-    width: 160px;
-    height: 40px;
-
-    border: 1px solid #ff9b70;
-    box-sizing: border-box;
-    border-radius: 1px;
-
-    text {
-      position: absolute;
-      width: 51px;
-      height: 24px;
-      left: 54px;
-      top: 8px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 24px;
-      /* identical to box height */
-
-      color: #ff9b70;
-    }
-
-    &:hover {
-      cursor: pointer;
-      background: #ff9b70;
-      border-radius: 1px;
-
-      text {
-        color: #ffffff;
-      }
-    }
-  }
-
-  .attendBtn {
-    position: absolute;
-    left: 28.12%;
-    right: 28.44%;
-    top: 86.5%;
-    bottom: 3.5%;
-
-    width: 139px;
-    height: 40px;
-
-    background: #ff5981;
-    border: 1px solid #ff5981;
-    border-radius: 1px;
-
-    text {
-      position: absolute;
-      width: 60px;
-      height: 24px;
-      left: 40px;
-      top: 8px;
-
-      font-family: Barlow;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 24px;
-      /* identical to box height */
-
-      color: #ffffff;
-    }
-
-    &:hover {
-      cursor: pointer;
-      border: 1px solid #ff5981;
-      box-sizing: border-box;
-      background: #ffffff;
-      border-radius: 1px;
-
-      text {
-        color: #ff5981;
-      }
-    }
+    transform: scale(1.08);
+    // border: 1px solid #555555;
+    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.3);
   }
 }
+
+//   .title {
+//     position: absolute;
+//     width: 320px;
+//     height: 72px;
+//     left: 0px;
+//     top: 8px;
+
+//     p {
+//       position: absolute;
+//       width: 165px;
+//       height: 22px;
+//       left: 12px;
+//       top: 5px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 900;
+//       font-size: 16px;
+//       line-height: 19px;
+
+//       color: #000000;
+//     }
+//   }
+
+//   .descriptionBox {
+//     position: absolute;
+//     width: 320px;
+//     height: 80px;
+//     left: 0px;
+//     top: 80px;
+
+//     p {
+//       position: absolute;
+//       width: 151.59px;
+//       height: 14px;
+//       left: 12px;
+//       top: 8px;
+
+//       font-family: Lato;
+//       font-style: normal;
+//       font-weight: normal;
+//       font-size: 12px;
+//       line-height: 14px;
+
+//       color: #ada8a8;
+//     }
+//   }
+
+//   .credNratingBox {
+//     position: absolute;
+//     width: 320px;
+//     height: 64px;
+//     left: 0px;
+//     top: 160px;
+
+//     .creditBox {
+//       position: absolute;
+//       width: 127px;
+//       height: 64px;
+//       left: 192px;
+//       top: 0px;
+
+//       background: #ffffff;
+//       border: 1px solid rgba(0, 0, 0, 0.1);
+//       box-sizing: border-box;
+
+//       .heading {
+//         position: absolute;
+//         width: 91px;
+//         height: 20px;
+//         left: 18px;
+//         top: 6px;
+
+//         font-family: Barlow;
+//         font-style: normal;
+//         font-weight: 500;
+//         font-size: 16px;
+//         line-height: 19px;
+//         /* identical to box height */
+
+//         color: #525252;
+//       }
+
+//       .value {
+//         position: absolute;
+//         width: 32px;
+//         height: 32px;
+//         left: 48px;
+//         top: 24px;
+
+//         font-family: Scope One;
+//         font-style: normal;
+//         font-weight: normal;
+//         font-size: 32px;
+//         line-height: 44px;
+
+//         color: #868bff;
+//       }
+//     }
+
+//     .ratingBox {
+//       position: absolute;
+//       width: 193px;
+//       height: 64px;
+//       left: -1px;
+//       top: 0px;
+
+//       background: #ffffff;
+//       border: 1px solid rgba(0, 0, 0, 0.1);
+//       box-sizing: border-box;
+
+//       .heading {
+//         position: absolute;
+//         width: 46px;
+//         height: 20px;
+//         left: 72px;
+//         top: 3px;
+
+//         font-family: Barlow;
+//         font-style: normal;
+//         font-weight: 500;
+//         font-size: 16px;
+//         line-height: 19px;
+//         /* identical to box height */
+
+//         color: #525252;
+//       }
+//     }
+//   }
+
+//   .subCatBox {
+//     position: absolute;
+//     width: 320px;
+//     height: 72px;
+//     left: 0px;
+//     top: 223px;
+
+//     .subjectBox {
+//       position: absolute;
+//       left: 5.94%;
+//       right: 51.25%;
+//       top: 22.22%;
+//       bottom: 38.89%;
+
+//       border: 1px solid rgba(30, 200, 255, 0.54);
+//       box-sizing: border-box;
+//       border-radius: 2px;
+
+//       .value {
+//         position: absolute;
+//         // width: 40px;
+//         height: 14px;
+//         left: 7px;
+//         top: 7px;
+
+//         font-family: Barlow;
+//         font-style: normal;
+//         font-weight: normal;
+//         font-size: 12px;
+//         line-height: 14px;
+
+//         color: #1ec8ff;
+//       }
+//     }
+
+//     .categoryBox {
+//       position: absolute;
+//       left: 53.12%;
+//       right: 5.62%;
+//       top: 22.22%;
+//       bottom: 38.89%;
+
+//       border: 1px solid rgba(50, 0, 250, 0.19);
+//       box-sizing: border-box;
+//       border-radius: 2px;
+
+//       .value {
+//         position: absolute;
+//         // width: 48px;
+//         height: 14px;
+//         left: 6px;
+//         top: 7px;
+
+//         font-family: Barlow;
+//         font-style: normal;
+//         font-weight: normal;
+//         font-size: 12px;
+//         line-height: 14px;
+
+//         color: #3200fa;
+//       }
+//     }
+//   }
+
+//   .authorBox {
+//     position: absolute;
+//     width: 320px;
+//     height: 40px;
+//     left: -1px;
+//     top: 294px;
+
+//     background: #ffffff;
+//     border: 1px solid rgba(0, 0, 0, 0.1);
+//     box-sizing: border-box;
+
+//     .heading {
+//       position: absolute;
+//       width: 50px;
+//       height: 20px;
+//       left: 84px;
+//       top: 10px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 500;
+//       font-size: 16px;
+//       line-height: 19px;
+//       /* identical to box height */
+
+//       color: #525252;
+//     }
+
+//     .value {
+//       position: absolute;
+//       width: 78px;
+//       height: 11px;
+//       left: 170px;
+//       top: 14px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 300;
+//       font-size: 12px;
+//       line-height: 14px;
+
+//       color: #000000;
+//     }
+//   }
+
+//   .enrollBtn {
+//     position: absolute;
+//     left: 26.25%;
+//     right: 23.75%;
+//     top: 86.5%;
+//     bottom: 3.5%;
+
+//     width: 160px;
+//     height: 40px;
+
+//     background: #41a3fe;
+//     border: 1px solid #41a3fe;
+//     border-radius: 1px;
+
+//     text {
+//       position: absolute;
+//       width: 51px;
+//       height: 24px;
+//       left: 54px;
+//       top: 8px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 500;
+//       font-size: 20px;
+//       line-height: 24px;
+//       /* identical to box height */
+
+//       color: #ffffff;
+//     }
+
+//     &:hover {
+//       cursor: pointer;
+//       border: 1px solid #41a3fe;
+//       box-sizing: border-box;
+//       background: #ffffff;
+//       border-radius: 1px;
+
+//       text {
+//         color: #41a3fe;
+//       }
+//     }
+//   }
+
+//   .modifyBtn {
+//     position: absolute;
+//     left: 26.25%;
+//     right: 23.75%;
+//     top: 86.5%;
+//     bottom: 3.5%;
+
+//     width: 160px;
+//     height: 40px;
+
+//     border: 1px solid #ff9b70;
+//     box-sizing: border-box;
+//     border-radius: 1px;
+
+//     text {
+//       position: absolute;
+//       width: 51px;
+//       height: 24px;
+//       left: 54px;
+//       top: 8px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 500;
+//       font-size: 20px;
+//       line-height: 24px;
+//       /* identical to box height */
+
+//       color: #ff9b70;
+//     }
+
+//     &:hover {
+//       cursor: pointer;
+//       background: #ff9b70;
+//       border-radius: 1px;
+
+//       text {
+//         color: #ffffff;
+//       }
+//     }
+//   }
+
+//   .attendBtn {
+//     position: absolute;
+//     left: 28.12%;
+//     right: 28.44%;
+//     top: 86.5%;
+//     bottom: 3.5%;
+
+//     width: 139px;
+//     height: 40px;
+
+//     background: #ff5981;
+//     border: 1px solid #ff5981;
+//     border-radius: 1px;
+
+//     text {
+//       position: absolute;
+//       width: 60px;
+//       height: 24px;
+//       left: 40px;
+//       top: 8px;
+
+//       font-family: Barlow;
+//       font-style: normal;
+//       font-weight: 500;
+//       font-size: 20px;
+//       line-height: 24px;
+//       /* identical to box height */
+
+//       color: #ffffff;
+//     }
+
+//     &:hover {
+//       cursor: pointer;
+//       border: 1px solid #ff5981;
+//       box-sizing: border-box;
+//       background: #ffffff;
+//       border-radius: 1px;
+
+//       text {
+//         color: #ff5981;
+//       }
+//     }
+//   }
+// }
