--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -2,17 +2,21 @@
 $White-0: #ffffff;
 $White-1: #fcfcfc;
 $White-2: #f7f7f7;
+$White-3: #eb2b2b31;
 
 $Blue-1: #1323dd;
 $Blue-2: #4a3ebe;
 $Blue-3: #397ef0;
-
+$Blue-4: #232057;
+$Blue-5: #1c52ad;
+$Blue-6: #0d3375;
 $Blue-10: #1c1627;
 
-$Blue-10: #d9e3fd;
+$Blue-11: #d9e3fd;
 
 $Yellow-1: #ffe3b0;
 $Yellow-2: #fbbc05;
+$Yellow-10: #ff9c44;
 
 $Black-1: #3f3e3e;
 
@@ -22,3 +26,7 @@ $grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
 $grad-3: linear-gradient(204.02deg, #000000 -91.48%, #84eefc 101.17%);
 $grad-4: linear-gradient(204.02deg, #ec4c5c 0.57%, #ffe3b0 101.17%);
 $grad-5: linear-gradient(149.18deg, #fec480 2.94%, #ec4c5c 101.19%);
+$grad-6: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
+
+// Shadow
+$shadow-1: 10px 10px 20px rgba(0, 0, 0, 0.15);
