--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -23,10 +23,10 @@ $Black-1: #3f3e3e;
 // Gradients
 $grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
 $grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
-$grad-3: linear-gradient(204.02deg, #000000 -91.48%, #84eefc 101.17%);
-$grad-4: linear-gradient(204.02deg, #ec4c5c 0.57%, #ffe3b0 101.17%);
-$grad-5: linear-gradient(149.18deg, #fec480 2.94%, #ec4c5c 101.19%);
+$grad-3: linear-gradient(204.02deg, #63c060 -20.48%, #9bcfff 101.17%);
 $grad-6: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
+$grad-7: linear-gradient(204.12deg, #FFC661 0%, #EE3D4F 101.17%);
+$grad-8: linear-gradient(203.81deg, #00FFFF -8.36%, #504DE8 101.17%);
 
 // Shadow
 $shadow-1: 10px 10px 20px rgba(0, 0, 0, 0.15);
