--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -2,7 +2,9 @@
 $White-0: #ffffff;
 $White-1: #fcfcfc;
 $White-2: #f7f7f7;
-$White-3: #eb2b2b31;
+$White-3: #dddddd;
+
+$Red-4: #eb2b2b31;
 
 $Blue-1: #1323dd;
 $Blue-2: #4a3ebe;
@@ -16,6 +18,7 @@ $Blue-11: #d9e3fd;
 
 $Yellow-1: #ffe3b0;
 $Yellow-2: #fbbc05;
+$Yellow-3: #e2d245;
 $Yellow-10: #ff9c44;
 
 $Black-1: #3f3e3e;
@@ -24,9 +27,11 @@ $Black-1: #3f3e3e;
 $grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
 $grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
 $grad-3: linear-gradient(204.02deg, #63c060 -20.48%, #9bcfff 101.17%);
+$grad-4: linear-gradient(250.54deg, #0779eb -32.44%, #c9ffd8 100%);
+$grad-5: linear-gradient(109.15deg, #e2d245 0%, #27d2a9 100%);
 $grad-6: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
-$grad-7: linear-gradient(204.12deg, #FFC661 0%, #EE3D4F 101.17%);
-$grad-8: linear-gradient(203.81deg, #00FFFF -8.36%, #504DE8 101.17%);
+$grad-7: linear-gradient(204.12deg, #ffc661 0%, #ee3d4f 101.17%);
+$grad-8: linear-gradient(203.81deg, #00ffff -8.36%, #504de8 101.17%);
 
 // Shadow
 $shadow-1: 10px 10px 20px rgba(0, 0, 0, 0.15);
