Added course content listing in classroom

--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -38,3 +38,4 @@ $grad-8: linear-gradient(203.81deg, #00ffff -8.36%, #504de8 101.17%);
 
 // Shadow
 $shadow-1: 10px 10px 20px rgba(0, 0, 0, 0.15);
+$shadow-2: 10px 10px 20px rgba(0, 0, 0, 0.342);
