Added Detailed lesson level assignment box

--- a/src/Components/Plugins/Classroom/Base.scss
+++ b/src/Components/Plugins/Classroom/Base.scss
@@ -254,7 +254,7 @@
       align-self: center;
       margin-top: 2rem;
       width: 840px;
-      height: 435px;
+      // height: 435px;
       padding: 1rem 2rem 1rem 2rem;
 
       border: 1px solid #e7e7e7;
@@ -263,6 +263,131 @@
 
       .heading {
         @extend %heading;
+      }
+
+      .notice {
+        border: 1px solid #809604;
+        margin-top: 2rem;
+        padding: 2rem 2rem 2rem 2rem;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: lighter;
+        font-size: 24px;
+        line-height: 29px;
+        text-align: justify;
+        border-radius: 5px;
+
+        color: #809604;
+      }
+
+      .assignments {
+        margin-top: 1rem;
+        display: grid;
+        grid-template-columns: 1.3fr 2px 2fr;
+        grid-gap: 1rem;
+
+        .listing {
+          display: flex;
+          flex-direction: column;
+          height: min(200px);
+          .item {
+            margin-top: 1rem;
+            padding: 1rem;
+            // height: 96px;
+            text-align: justify;
+            box-sizing: border-box;
+            border-radius: 2px;
+
+            font-family: Barlow;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+
+            border: 0px;
+            background: #897df7;
+            color: $White-0;
+
+            &:hover {
+              cursor: pointer;
+            }
+          }
+
+          .active {
+            border: 0px;
+            background: #5544eb;
+            color: $White-0;
+          }
+        }
+        .divider {
+          background: #dadada;
+        }
+
+        .detailed {
+          display: flex;
+          flex-direction: column;
+          span {
+            font-family: Lato;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 20px;
+            line-height: 24px;
+
+            color: #000000;
+          }
+
+          .instructions {
+            margin-top: 1rem;
+            padding: 1rem;
+            border: 1px solid #dadada;
+
+            span {
+              font-size: 18px;
+              line-height: 22px;
+              font-weight: 700;
+              color: $Black-1;
+            }
+
+            p {
+              padding: 1rem 2rem 1rem 2rem;
+              font-family: Lato;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 16px;
+              line-height: 19px;
+              text-align: justify;
+
+              color: #494848;
+            }
+          }
+          .action {
+            display: flex;
+            flex-direction: row-reverse;
+            margin-top: 1rem;
+            button {
+              width: 128px;
+              height: 48px;
+              justify-self: right;
+
+              border-radius: 2px;
+
+              font-family: Barlow;
+              font-style: normal;
+              font-weight: 500;
+              font-size: 20px;
+              line-height: 24px;
+              /* identical to box height */
+              text-align: center;
+              border: 0px;
+
+              color: #ffffff;
+              background: #5544eb;
+              &:hover {
+                cursor: pointer;
+              }
+            }
+          }
+        }
       }
     }
   }
