--- a/src/Components/Plugins/Courses/detailed.scss
+++ b/src/Components/Plugins/Courses/detailed.scss
@@ -1,4 +1,4 @@
-@import "../../../../static//styles/globals.scss";
+@import "../../../../static/styles/globals.scss";
 
 .container {
   width: 100%;
