Move course creation form to generic component and renamed

--- a/src/Components/Generic/Forms/course.scss
+++ b/src/Components/Generic/Forms/course.scss
@@ -1,4 +1,4 @@
-@import "../../../../../static/styles/globals.scss";
+@import "../../../../static/styles/globals.scss";
 
 span {
   font-family: Lato;
