Can list lessons and create lessons using new form

--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -36,7 +36,7 @@ $grad-5: linear-gradient(109.15deg, #e2d245 0%, #27d2a9 100%);
 $grad-6: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
 $grad-7: linear-gradient(204.12deg, #ffc661 0%, #ee3d4f 101.17%);
 $grad-8: linear-gradient(203.81deg, #00ffff -8.36%, #504de8 101.17%);
-
+$grad-9: linear-gradient(306.31deg, #ffd29d 7.11%, #e85f53 94.22%);
 // Shadow
 $shadow-1: 10px 10px 20px rgba(0, 0, 0, 0.15);
 $shadow-2: 10px 10px 20px rgba(0, 0, 0, 0.342);
