--- a/src/Components/Generic/Cards/ModuleCard.scss
+++ b/src/Components/Generic/Cards/ModuleCard.scss
@@ -168,7 +168,7 @@
 }
 
 .detailedModuleCard {
-  height: 300px;
+  // height: 300px;
   width: 105%;
   padding: 1rem 2rem 1rem 2rem;
   grid-column: 1 / -1;
@@ -207,18 +207,24 @@
     }
   }
 
+  p {
+    color: #ffffff;
+    font-family: Lato;
+    font-style: normal;
+    font-weight: lighter;
+    font-size: 18px;
+    line-height: 24px;
+    padding-left: 2rem;
+  }
+
   .lessonsBox {
-    margin: 2rem 0 2rem 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    margin: 2rem 1rem 2rem 1rem;
 
     .lessonsList {
-      flex-grow: 4;
+      // flex-grow: 4;
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-      grid-gap: 2rem;
-      margin: 0 1rem 0 1rem;
+      grid-gap: 1rem;
     }
 
     .arrows {
@@ -230,8 +236,67 @@
 
       &:hover {
         cursor: pointer;
-        background: #00000010;
+        background: #00000027;
       }
     }
   }
+}
+
+.draftCard {
+  background: $grad-7;
+}
+
+.createLessonBtn {
+  width: 300px;
+  height: 160px;
+  background: #000000ad;
+
+  // border: 5px dashed #c2cfe0;
+  // box-sizing: border-box;
+  border-radius: 5px;
+  padding: 1rem 2rem 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  text-align: center;
+
+  span {
+    font-family: Barlow;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+
+    color: #c2cfe0;
+  }
+
+  img {
+    justify-self: center;
+    transform: scale(0.8);
+  }
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: $shadow-1;
+    background: #000000;
+    img {
+      transform: scale(0.85);
+    }
+  }
+
+  // span {
+  //   position: relative;
+  //   width: 252px;
+  //   height: 38px;
+  //   top: -4rem;
+  //   left: 2rem;
+
+  //   font-family: Barlow;
+  //   font-style: normal;
+  //   font-weight: 600;
+  //   font-size: 16px;
+  //   line-height: 19px;
+
+  //   color: #ececec;
+  // }
 }
