Change module card design

--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -32,7 +32,7 @@ $grad-card-1: linear-gradient(205.09deg, #dd13dd -12.19%, #2469de 101.17%);
 $grad-2: linear-gradient(27.72deg, #8400ff 0%, #ff786c 98.34%);
 $grad-3: linear-gradient(204.02deg, #63c060 -20.48%, #9bcfff 101.17%);
 $grad-4: linear-gradient(250.54deg, #0779eb -32.44%, #c9ffd8 100%);
-$grad-5: linear-gradient(109.15deg, #e2d245 0%, #27d2a9 100%);
+$grad-5: linear-gradient(109.15deg, #27d2a9 0%, #e2d245 100%);
 $grad-6: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
 $grad-7: linear-gradient(204.12deg, #ffc661 0%, #ee3d4f 101.17%);
 $grad-8: linear-gradient(203.81deg, #00ffff -8.36%, #504de8 101.17%);
